# watchtowerpy

./: .dockerignore  .env.example  .gitignore  ABOUTME.md  AI_NOTES.md  Dockerfile  Makefile  PROMPTS_USED.md  README.md  agents.md  docker-compose.yml  pyproject.toml  start.sh  wsgi.py
app/: __init__.py  celery_config.py  config.py  extensions.py
app/errors/: __init__.py
app/models/: __init__.py
app/repositories/: __init__.py  diff_repository.py  history_repository.py  link_repository.py  project_repository.py
app/routes/: __init__.py  api.py  main.py
app/services/: __init__.py  check_service.py  health_service.py  history_service.py  link_service.py  project_service.py
app/tasks/: __init__.py  check_tasks.py  screenshot_tasks.py
app/utils/: __init__.py  diff_utils.py  html_diff_utils.py
migrations/: __init__.py
static/: app.css
templates/: base.html  diff.html  index.html  link.html  status.html
tests/: conftest.py  test_app.py  test_check_service.py  test_config.py  test_diff_repository.py  test_diff_utils.py  test_errors.py  test_history_repository.py  test_history_service.py  test_html_diff_utils.py  test_repositories.py  test_routes.py  test_services.py  test_timezone_utils.py
