[project]
name = "checkdiff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.8.0",
    "jinja2>=3.1",
    "orjson>=3.11",
    "pytz",
    "tzdata",
    "arrow",
    "price-parser",
    "babel",
    "aiohttp>=3.9.0",
    "pyppeteer-ng==2.0.0rc13",
    "pyppeteerstealth>=0.0.4",
    "selenium>=4.0.0",
    "anthropic>=0.83.0",
    "python-dotenv>=1.2.1",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "gunicorn>=23.0.0",
    "celery>=5.6.2",
    "celery-sqlalchemy",
    "cerebras-cloud-sdk>=1.67.0",
    "markdown>=3.0",
    "playwright>=1.58.0",
]
